[gd_scene load_steps=4 format=2]

[ext_resource path="res://LocationArea.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/GUI_Theme.tres" type="Theme" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[node name="LocationArea" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label_Name" type="Label" parent="."]
margin_top = 0.707108
margin_right = 40.0
margin_bottom = 26.7071
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrewPos1" type="Position2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_LocationArea_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_LocationArea_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LocationArea_mouse_exited"]
